--- a/scripts.yaml
+++ b/scripts.yaml
@@ -44,7 +44,7 @@ leave_home:
 
 back_home:
   sequence:
-    - service: script.heating_init
+    - service: script.heating_back
     - service: automation.turn_on
       entity_id:
     #     - automation.bathroom_light_on
@@ -84,11 +84,28 @@ set_thermostat:
     - service: climate.set_preset_mode
       data:
         entity_id: "{{ entity_id }}"
-        preset_mode: "{{ preset_mode }}"
+        preset_mode: home
     - service: climate.set_temperature
       data_template:
         entity_id: "{{ entity_id }}"
         temperature: "{{ temperature }}"
+
+heating_morning:
+  sequence:
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.living_room
+        temperature: 20
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.kitchen
+        temperature: 19
+    - service: climate.turn_off
+      entity_id: climate.bedroom
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.study
+        temperature: 20
 
 heating_away:
   sequence:
@@ -100,35 +117,65 @@ heating_away:
       data_template:
         entity_id: group.thermostats
         temperature: 16
+    - service: climate.turn_off
+      entity_id: climate.loft
 
-heating_night:
-  sequence:
-    - service: climate.set_preset_mode
-      data:
-        entity_id: group.thermostats
-        preset_mode: home
-    - service: climate.set_temperature
-      data_template:
-        entity_id: group.thermostats
-        temperature: 18
-
-heating_init:
+heating_close:
   sequence:
     - service: script.set_thermostat
       data:
         entity_id: climate.living_room
-        preset_mode: home
-        temperature: 20
-    - service: script.set_thermostat
-      data:
-        entity_id: climate.study
-        preset_mode: home
         temperature: 20
     - service: script.set_thermostat
       data:
         entity_id: climate.kitchen
-        preset_mode: home
         temperature: 19
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.bedroom
+        temperature: 20
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.study
+        temperature: 20
+
+heating_back:
+  sequence:
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.living_room
+        temperature: 21
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.kitchen
+        temperature: 19
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.bedroom
+        temperature: 21
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.study
+        temperature: 20
+
+heating_night:
+  sequence:
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.living_room
+        temperature: 18
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.kitchen
+        temperature: 18
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.bedroom
+        temperature: 19
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.study
+        temperature: 18
 
 notify_presence:
   sequence:
