--- a/groups.yaml
+++ b/groups.yaml
@@ -18,3 +18,9 @@ garbage_sensors:
     - sensor.general_rubbish
     - sensor.recycling_waste
     - sensor.garden_waste
+
+living_room_lights:
+  name: Living Room Lights
+  entities:
+    - light.living_room_lamp
+    - light.living_room_light
