--- a/automations.yaml
+++ b/automations.yaml
@@ -162,10 +162,11 @@
     platform: state
     entity_id: sensor.washer_status
   condition:
-    condition: not
-    conditions:
-      condition: state
-      entity_id: sensor.washer_status
-      state: 'Delay'
+    - condition: template
+      value_template: >
+        {{ trigger.to_state.state != "Delay" and
+          trigger.to_state.state != unknown and
+          trigger.from_state.state != unknown and
+          trigger.to_state.state != trigger.from_state.state }}
   action:
-  - service: script.notify_washer_state
+    - service: script.notify_washer_state
