--- a/scripts.yaml
+++ b/scripts.yaml
@@ -268,6 +268,16 @@ notify_washer_state:
           Completion time estimated at {{ states('sensor.washer_eta') }}.
         {%- endif -%}
 
+morning:
+  sequence:
+    - service: script.heating_morning
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.play_radio
+        option: 'Český rozhlas Radiožurnál'
+    - service: switch.turn_on
+      entity_id: switch.kitchen_light
+
 bedtime:
   sequence:
     - service: light.turn_on
