--- a/configuration.yaml
+++ b/configuration.yaml
@@ -167,6 +167,5 @@ garbage_collection:
 wake_on_lan:
 
 group: !include groups.yaml
-automation: !include automations.yaml
-script: !include scripts.yaml
-# scene: !include scenes.yaml
+automation: !include_dir_merge_named automations/
+script: !include_dir_merge_named scripts/
