--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -57,7 +57,13 @@ bedtime:
     - service: light.turn_off
       data:
         entity_id: light.bedroom_lamp
-        transition: 900
+        transition: 1200
+    - service: switch.turn_off
+      data:
+        entity_id:
+          - switch.kitchen_light
+          - switch.hallway_light
+          - switch.christmas_tree
     - service: script.all_media_off
 
 bedside_actions:
@@ -116,7 +122,17 @@ all_lights_off:
         - light.office_lamp
         - light.bedroom_lamp
     - service: switch.turn_off
-      entity_id: switch.kitchen_light
+      data:
+        entity_id:
+          - switch.kitchen_light
+          - switch.hallway_light
+          - switch.christmas_tree
+
+toggle_bedroom_light:
+  sequence:
+    - service: light.toggle
+      data:
+        entity_id: light.bedroom_lamp
 
 vacuum_kitchen:
   sequence:
